[project]
name = "openenv-rag-curator"
version = "0.1.0"
description = "OpenEnv environment for training AI agents to clean and curate RAG knowledge bases"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "S777k", email = "sourabh@example.com"}
]
keywords = ["openenv", "rag", "data-engineering", "reinforcement-learning", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "PyYAML>=6.0",
    "huggingface_hub>=0.23.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/S777k/openenv-rag-curator"
Repository = "https://github.com/Sourabh7k-Insights/openenv-rag-curator"
Documentation = "https://github.com/Sourabh7k-Insights/openenv-rag-curator#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openenv_rag_curator"]

[tool.openenv]
name = "rag-db-curator"
version = "0.1.0"
